# BoomEngine

./: .gitignore  CMakeLists.txt  README.md  vcpkg.cmake
dev/: boom_cl.lib  puli.lib
game/: boom
src/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/bnet/: CMakeLists.txt  bnet.h  bnet_posix.c  bnet_win32.c
src/engine/client/: client.c  client.h  window.c  window.h
src/engine/include/boom/: b_math.h  console.h  cvar.h  debug.h  defs.h  entry.h  fsys.h  gamedll.h  inputs.h  mesh.h  shader.h  str.h  texture.h
src/engine/scripting/: CMakeLists.txt  bscript.c  bscript.h
src/engine/server/: server.h
src/engine/shared/: boom.h  cvar.c  cvar.h  debug.c  debug.h  defs.h  paths.c  paths.h  vector.c  vector.h
src/engine/src/: console.c  cvar.c  debug.c  entry.c  fsys.c  input.c  math.c  mesh.c  shader.c  stb_image.h  str.c  texture.c
src/game/: CMakeLists.txt
src/game/example/: CMakeLists.txt
src/game/example/client/: CMakeLists.txt  client.c
src/game/example/server/: CMakeLists.txt  server.c
src/game/game/: CMakeLists.txt  game.c
src/game/launcher/: CMakeLists.txt  client.c  client.rc  main.c  server.c
src/tools/: CMakeLists.txt
src/tools/editor/: CMakeLists.txt  editor.rc  main.cpp  viewport.cpp  viewport.h
src/utils/: CMakeLists.txt
src/utils/puli/: CMakeLists.txt  puli.h  puli_defs.h  puli_dialog.cpp  puli_dialog.h  puli_dll.c  puli_dll.h  puli_fsys.c  puli_fsys.h  puli_str.c  puli_str.h
src/utils/puli/test/: CMakeLists.txt  main.c
src/utils/ut/: CMakeLists.txt  ut.c  ut.h
